update backend, solve problems about cors, update reverse proxy config

--- a/backend/nginx/nginx.conf
+++ b/backend/nginx/nginx.conf
@@ -6,6 +6,7 @@ events {
 http {
     include /etc/nginx/mime.types;
     sendfile on;
+    client_max_body_size 100M;
 
     server {
         listen 80;
@@ -15,6 +16,19 @@ http {
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
+            
+            # Fix CORS issues
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, DELETE, PUT, PATCH';
+            add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, Cache-Control';
+            add_header 'Access-Control-Allow-Credentials' 'true';
+
+                        # Increase timeout settings
+            proxy_connect_timeout 660s;
+            proxy_send_timeout 660s;
+            proxy_read_timeout 660s;
+            send_timeout 660s;
         }
 
         location /api/ {
@@ -23,10 +37,23 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
+            # Increase timeout settings
+            proxy_connect_timeout 660s;
+            proxy_send_timeout 660s;
+            proxy_read_timeout 660s;
+            send_timeout 660s;
+
+            # Prevent buffering large responses
+            proxy_buffering off;
+            proxy_request_buffering off;
+
+            client_max_body_size 100M;
             # Fix CORS issues
-            add_header 'Access-Control-Allow-Origin' '*';
+            #add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Origin' 'http://localhost:3000' always;
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, DELETE, PUT, PATCH';
             add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, Cache-Control';
+            add_header 'Access-Control-Allow-Credentials' 'true';
 
             if ($request_method = 'OPTIONS') {
                 return 204;
