--- a/backend/backend/Dockerfile
+++ b/backend/backend/Dockerfile
@@ -6,7 +6,7 @@ WORKDIR /app
 COPY requirements.txt ./
 
 # Install dependencies
-
+RUN apt-get update && apt-get install -y curl
 RUN pip install --upgrade pip
 RUN pip install -r requirements.txt
 
