--- a/backend/backend/Dockerfile
+++ b/backend/backend/Dockerfile
@@ -3,12 +3,17 @@ FROM python:3.10-slim
 
 WORKDIR /app
 
-COPY requirements.txt ./
+# Install system dependencies & clean up to save space
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends curl && \
+    rm -rf /var/lib/apt/lists/*
 
-# Install dependencies
+# Copy only requirements first to leverage Docker layer caching
+COPY requirements.txt .
 
-RUN pip install --upgrade pip
-RUN pip install -r requirements.txt
+# Upgrade pip and install Python dependencies without caching wheels
+RUN pip install --no-cache-dir --upgrade pip && \
+    pip install --no-cache-dir -r requirements.txt
 
 # Copy the rest 
 COPY . .
