--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -46,12 +46,13 @@ services:
       - USERS_COLLECTION=users
       - SESSIONS_COLLECTION=sessions
       - CHROMADB_URL=http://chromadb:8000
-      - LLM_MODEL_NAME=DeepSeek-R1-Distill-Qwen-32B-Q6_K.ggu
-      - TOKENIZER_NAME=deepseek-ai/DeepSeek-R1-Distill-Qwen-14B
+      - LLM_MODEL_NAME=meta-llama/Llama-3.1-8B-Instruct
+      - TOKENIZER_NAME=codellama/CodeLlama-7b-Python-hf
       - LLM_URI=http://10.3.0.96:8888/v1
       - EMBEDDING_MODEL_URL=http://10.3.0.96:8888/v1/ # we load the embedding model to the backend server but we used to load it to the llm server before. 
       - EMBEDDING_MODEL_NAME=nomic-embed-text
       - EMBEDDING_MODEL_NAME_V2=nomic-ai/nomic-embed-text-v2-moe
+      - SECRET_KEY=your_secret_key  # Replace with a strong secret key
 
     networks:
       - llm1-app-network
